# higher-order-interactions

./: .dockerignore  .gitignore  Cargo.toml  README.md  environment.yml  plot.ipynb  requirements.txt  sample.R  stats.csv
aggregating/: Cargo.toml  Dockerfile
aggregating/src/: main.rs
bootstrapping/: Cargo.toml  Dockerfile
bootstrapping/src/: main.rs
